--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ">=2.19.4 <3.0.0"
 
 dependencies:
+  dotenv: ^4.1.0
   flutter:
     sdk: flutter
   nostr: ^1.3.3
@@ -19,3 +20,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+aseets:
+  - .env
